@@ -50,12 +50,18 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'  // JUnit, Mockito, AssertJ
+    testImplementation 'org.mockito:mockito-core'                           // Дополнительно для Mockito
+    testImplementation 'org.testcontainers:junit-jupiter'                   // Testcontainers для интеграционных тестов
+    testImplementation 'org.testcontainers:postgresql'                      // Testcontainers для PostgreSQL
+    testImplementation 'org.springframework.boot:spring-boot-starter-web'   // Для MockMvc
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'  // Feign
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'            // Для JUnit
 
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+    useJUnitPlatform()                        // Включаем поддержку JUnit Platform
+    jvmArgs '-XX:+EnableDynamicAgentLoading'  // Для предотвращения предупреждений о динамической загрузке агента
 }
